Adicionando customização a tela de login do auth server, criando handlers de exceção, registro de usuário tratando erros e organizando alguns arquivos. Tambem estudando possibilidade de separar o auth server para facilitar configuração de OIDC