@@ -6,16 +6,12 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 
-import java.util.Collection;
 import java.util.Collections;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 
@@ -27,7 +23,8 @@ public class ResourceServerConfig {
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .authorizeRequests()
+                .authorizeRequests()
+                .antMatchers("/api/user/register", "/h2-console/**", "/actuator/health").permitAll()
                 .antMatchers("/oauth2/**").authenticated()
                 .anyRequest().authenticated()
             .and()
@@ -38,7 +35,7 @@ public class ResourceServerConfig {
         return http.formLogin(Customizer.withDefaults()).build();
     }
 
-    private JwtAuthenticationConverter jwtAuthenticationConverter() {
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
         var converter = new JwtAuthenticationConverter();
         converter.setJwtGrantedAuthoritiesConverter((jwt) -> {
             var authorities = jwt.getClaimAsStringList("authorities");
@@ -47,7 +44,7 @@ public class ResourceServerConfig {
             }
             var jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
             var grantedAuthorities = jwtGrantedAuthoritiesConverter.convert(jwt);
-            var grantedUserAuthorities = authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+            var grantedUserAuthorities = authorities.stream().map(SimpleGrantedAuthority::new).toList();
 
             grantedAuthorities.addAll(grantedUserAuthorities);
             return grantedAuthorities;
